spacing solved

--- a/src/components/PackageCatalog/index.scss
+++ b/src/components/PackageCatalog/index.scss
@@ -164,7 +164,6 @@
       }
       .prod_title {
         display: -webkit-box;
-        max-width: 150px;
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         overflow: hidden;
